# aurora

./: .env.sample  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/backend/: config.py  database.py  models.py  prompts.py  server.py  utils.py
backend/backend/processors/: process_files.py  process_url.py  utils.py
backend/backend/routes/: __init__.py  chat.py  notes.py  research.py  source.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/context/: NotesContext.tsx  ResearchContext.tsx  SourcesContext.tsx
frontend/src/pages/home/: HomePage.tsx  Sidebar.tsx
frontend/src/pages/research/: AddSourceModal.tsx  ChatContainer.tsx  NoteItem.tsx  NotesSidebar.tsx  ResearchPage.tsx  SourcesSidebar.tsx
frontend/src/pages/research/components/: AddSourceModal.tsx  FileUploadForm.tsx  Message.tsx  NoteItem.tsx  QuickActions.tsx  SaveNoteModal.tsx  SourceLinkForm.tsx  SourceTypeButton.tsx  TypingIndicator.tsx  ViewNoteModal.tsx
